<resources>
    <string name="app_name">Belajar Bahasa Inggris</string>
    <string name="image_campus">Image Campus</string>
    <string name="copyright">Copyright © 2023 - Muhammad Zulfikar Sachori Putra</string>
    <string name="campus_address">Jl. Jatiwaringin Raya 144 Bekasi</string>
    <string name="campus_name">STMIK MERCUSUAR</string>
    <string name="mulai">Mulai</string>
    <string name="dark_mode">"Dark Mode "</string>
    <string name="loading">Loading…</string>
    <string name="biodata_mahasiswa">BIODATA MAHASISWA</string>
    <string name="stmik_mercusuar_bekasi">STMIK MERCUSUAR BEKASI</string>
    <string name="nim">NIM</string>
    <string name="colon">:</string>
    <string name="nimvalue">2355201549</string>
    <string name="nama">Nama</string>
    <string name="namadiri">Muhammad Zulfikar Sachori Putra</string>
    <string name="prodi">Prodi</string>
    <string name="teknik_informatika">Teknik Informatika</string>
    <string name="motivasi_hidup">Motivasi Hidup</string>
    <string name="motivasivalue">Ingatlah bahwa kegagalan adalah bagian dari perjalanan menuju kesuksesan. Jangan takut gagal, belajarlah darinya.</string>
    <string name="e_mail">E-mail</string>
    <string name="mzulganteng6_gmail_com"><u><i>mzulganteng6@gmail.com</i></u></string>
    <string name="welcome"><b>SELAMAT DATANG</b></string>
    <string name="icon">icon</string>
    <string name="biodata_diri">Biodata Diri</string>
    <string name="scrollable">Scrollable</string>
    <string name="web_view">Web View</string>
    <string name="kalkulator">Kalkulator</string>
    <string name="social_media1">Link Sosial Media</string>
    <string name="username">Masukkan Username di sini…</string>
    <string name="password">Masukkan Password di sini…</string>
    <string name="show_password">Show Password</string>
    <string name="submit">SUBMIT</string>
    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="attempts_left">%d percobaan lagi.</string>
    <string name="login_attempts_message">0 kali. Silakan tunggu %1$d detik sebelum mencoba lagi.</string>
    <string name="kesempatan_anda">Kesempatan Anda</string>
    <string name="reg">Belum register?.</string>
    <string name="reg2"><u><i><b>teks ini</b></i></u></string>
    <string name="reg3">Silahkan register dengan menekan</string>
    <string name="log">Sudah register?.</string>
    <string name="log2">Silahkan login dengan menekan</string>
    <string name="dashboard">Dashboard</string>
    <string name="view_pager_description">This is a view pager for swiping between pages.</string>
    <string name="tab_layout_description">This is a tab layout for navigation.</string>
    <string name="dashboard1">Dashboard</string>
    <string name="logout">Sistem secara otomatis mengalihkan ke Menu Utama</string>
    <string name="logout2">"Jika tidak terjadi selama 5 detik, klik "</string>
    <string name="logout3">Anda telah berhasil logout</string>
    <string name="logout4">Logout</string>
    <string name="telepon"><u><i>+62 822-7942-5257</i></u></string>
    <string name="blogspot"><u><i>https://muhammadzulfikarputra.blogspot.com/</i></u></string>
    <string name="wordpress"><u><i>https://muhammadzulfikarputra.wordpress.com/</i></u></string>
    <string name="facebook"><u><i>https://www.facebook.com/profile.php/?id=100000658541302</i></u></string>
    <string name="youtube"><u><i>https://www.youtube.com/@MuhammadZulfikarPutra</i></u></string>
    <string name="linkedin"><u><i>https://www.linkedin.com/in/muhammad-zulfikar-sachori-putra-701854154/</i></u></string>
    <string name="twitter"><u><i>https://twitter.com/mzulfikarsp/</i></u></string>
    <string name="pinterest"><u><i>https://id.pinterest.com/mzulfikarsp/</i></u></string>
    <string name="alamat">Alamat</string>
    <string name="alamat2">Dusun III Sidodadi, Desa Sukamaju, Kec. Tapung Hilir, Kab. Kampar, Pekanbaru, Riau</string>
    <string name="kewarganegaraan">Kewarganegaraan</string>
    <string name="warga">Warga Negara Indonesia</string>
    <string name="pekerjaan">Pekerjaan</string>
    <string name="pekerjaan2">Pelajar/Mahasiswa</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_1">1</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="pinterest2">Pinterest</string>
    <string name="sosial_media">Sosial Media</string>
    <string name="status_perkawinan">Status Perkawinan</string>
    <string name="status">Belum Kawin</string>
    <string name="nomor_ponsel">Nomor Ponsel</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="tanggal2">Tegal, 18 November 2001</string>
    <string name="curriculum_vitae">CURRICULUM VITAE</string>
    <string name="informasi_pribadi">INFORMASI PRIBADI</string>
    <string name="website">Website</string>
    <string name="twitter2">Twitter</string>
    <string name="facebook2">Facebook</string>
    <string name="linkedin2">LinkedIn</string>
    <string name="youtube2">Youtube</string>
    <string name="wordpress2">Wordpress</string>
    <string name="blogger2">Blogger</string>
    <string name="_1_blogger">1. Blogger</string>
    <string name="_2_wordpress">2. Wordpress</string>
</resources>