<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".Biodata">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center"
            android:layout_marginBottom="7dp"
            android:layout_marginTop="7dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/dayxdark"
                android:layout_width="124dp"
                android:layout_height="50dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:checked="false"
                android:text="@string/dark_mode"
                app:showText="false" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/biodata_mahasiswa"
                android:textSize="24sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="0dp" />

            <TextView
                android:id="@+id/title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stmik_mercusuar_bekasi"
                android:textSize="19sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp" />

            <ImageView
                android:id="@+id/foto"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/foto"
                android:layout_gravity="center_horizontal"
                tools:ignore="ContentDescription"
                android:layout_marginBottom="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/nim_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.25"
                    android:text="@string/nim" />

                <TextView
                    android:id="@+id/nim_colon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/colon"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp" />

                <TextView
                    android:id="@+id/nim_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/nimvalue" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/nama_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.25"
                    android:text="@string/nama" />

                <TextView
                    android:id="@+id/nama_colon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/colon"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp" />

                <TextView
                    android:id="@+id/nama_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/namadiri" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/prodi_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.25"
                    android:text="@string/prodi" />

                <TextView
                    android:id="@+id/prodi_colon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/colon"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp" />

                <TextView
                    android:id="@+id/prodi_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/teknik_informatika" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.25"
                    android:text="@string/e_mail" />

                <TextView
                    android:id="@+id/email_colon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/colon"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp" />

                <TextView
                    android:id="@+id/email_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/mzulganteng6_gmail_com"
                    android:textColor="@color/link" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/motivasi_hidup_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.25"
                    android:text="@string/motivasi_hidup" />

                <TextView
                    android:id="@+id/motivasi_hidup_colon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/colon"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp" />

                <TextView
                    android:id="@+id/motivasi_hidup_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:justificationMode="inter_word"
                    android:text="@string/motivasivalue" />
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
