<!--
  ~ /**
  ~  * Copyright (c) 2023 - Muhammad Zulfikar Sachori Putra
  ~  * Nama Aplikasi : Belajar Bahasa Inggris
  ~  * Nama Package : com.zulfikar.belajarbahasainggris
  ~  * Versi Aplikasi : 1.0.1.20112023
  ~  */
  ~
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/dayxdark"
            android:layout_width="124dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:checked="false"
            android:text="@string/dark_mode"
            app:showText="false" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_marginTop="20dp"
            android:textSize="24sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp" />

        <EditText
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:minWidth="48dp"
            android:hint="@string/username"
            android:inputType="text"
            android:autofillHints="username" />

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:minHeight="48dp"
            android:minWidth="48dp"
            android:inputType="textPassword"
            android:autofillHints="password" />

        <CheckBox
            android:id="@+id/showPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_password" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="50dp"
            android:paddingRight="50dp" >

            <!-- Garis horizontal -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />

            <TableRow
                android:id="@+id/submits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true">

                <!-- Garis vertikal -->
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/black" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="0.05"
                    android:background="@color/my_light_accent"
                    android:contentDescription="@string/icon"
                    android:src="@android:drawable/ic_menu_send" />

                <!-- Garis vertikal -->
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/black" />

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="@string/submit"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:background="@color/my_light_accent"
                    android:textStyle="bold" />

                <!-- Garis vertikal -->
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/black" />
            </TableRow>
            <!-- Garis horizontal -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />
        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp" >

            <TextView
                android:id="@+id/register3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:text="@string/log2" />

            <TextView
                android:id="@+id/login2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="@string/reg2"
                android:textColor="@color/link" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>